@startuml
title 面向越南留学生的铁道专业汉越术语翻译学习软件数据对象类图
skinparam defaultFontName "Noto Sans CJK SC"
skinparam shadowing false
skinparam backgroundColor white
skinparam ArrowColor #3C5488
skinparam ActorBorderColor #3C5488
skinparam ActorFontColor #111827
skinparam UsecaseBorderColor #0072B2
skinparam UsecaseBackgroundColor #F8FBFF
skinparam ComponentBorderColor #0072B2
skinparam ComponentBackgroundColor #F8FBFF
skinparam DatabaseBorderColor #009E73
skinparam DatabaseBackgroundColor #F4FFF9
skinparam SequenceLifeLineBorderColor #3C5488
skinparam ParticipantBorderColor #0072B2
skinparam ParticipantBackgroundColor #F8FBFF
skinparam ActivityBorderColor #0072B2
skinparam ActivityBackgroundColor #F8FBFF

class "sys_user" as E0 {
  +id
  +created_at
  +updated_at
}
class "sys_role" as E1 {
  +id
  +created_at
  +updated_at
}
class "sys_login_log" as E2 {
  +id
  +created_at
  +updated_at
}
class "term_category" as E3 {
  +id
  +created_at
  +updated_at
}
class "railway_term" as E4 {
  +id
  +created_at
  +updated_at
}
class "favorite_term" as E5 {
  +id
  +created_at
  +updated_at
}
class "practice_record" as E6 {
  +id
  +created_at
  +updated_at
}
class "practice_answer" as E7 {
  +id
  +created_at
  +updated_at
}
class "wrong_question" as E8 {
  +id
  +created_at
  +updated_at
}
class "sys_operation_log" as E9 {
  +id
  +created_at
  +updated_at
}
E0 --> E1 : 业务关联
E1 --> E2 : 业务关联
E2 --> E3 : 业务关联
E3 --> E4 : 业务关联
E4 --> E5 : 业务关联
E5 --> E6 : 业务关联
E6 --> E7 : 业务关联
E7 --> E8 : 业务关联
E8 --> E9 : 业务关联
@enduml